新增神獸、操作說明、對話視窗

--- a/src/assets/scss/all.scss
+++ b/src/assets/scss/all.scss
@@ -12,3 +12,13 @@
     height: 99px;
   }
 }
+
+@font-face {
+  font-family: '404notfont-by-9527.tw';
+  src: url('@/assets/404notfont-by-9527.tw.woff2?2') format('woff2');
+  font-display: swap;
+}
+
+.text-lattice {
+  font-family: '404notfont-by-9527.tw', sans-serif !important;
+}
